@@ -8,7 +8,7 @@
 package org.elasticsearch.xpack.inference.services.fireworksai;
 
 import org.apache.http.HttpHeaders;
-import org.elasticsearch.action.support.PlainActionFuture;
+import org.elasticsearch.action.support.TestPlainActionFuture;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.bytes.BytesReference;
@@ -19,12 +19,17 @@ import org.elasticsearch.inference.InferenceServiceResults;
 import org.elasticsearch.inference.InputType;
 import org.elasticsearch.inference.Model;
 import org.elasticsearch.inference.SimilarityMeasure;
+import org.elasticsearch.inference.UnifiedCompletionRequest;
+import org.elasticsearch.inference.completion.ContentString;
+import org.elasticsearch.inference.completion.Message;
 import org.elasticsearch.test.http.MockResponse;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.inference.external.http.sender.HttpRequestSenderTests;
 import org.elasticsearch.xpack.inference.services.ConfigurationParseContext;
+import org.elasticsearch.xpack.inference.services.InferenceEventsAssertion;
 import org.elasticsearch.xpack.inference.services.InferenceServiceTestCase;
+import org.elasticsearch.xpack.inference.services.ServiceFields;
 import org.elasticsearch.xpack.inference.services.fireworksai.embeddings.FireworksAiEmbeddingsModel;
 import org.hamcrest.Matchers;
 
@@ -33,6 +38,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import static org.elasticsearch.common.xcontent.XContentHelper.stripWhitespace;
 import static org.elasticsearch.common.xcontent.XContentHelper.toXContent;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertToXContentEquivalent;
 import static org.elasticsearch.xpack.core.inference.results.DenseEmbeddingFloatResultsTests.buildExpectationFloat;
@@ -44,10 +50,14 @@ import static org.elasticsearch.xpack.inference.services.ServiceFields.MODEL_ID;
 import static org.elasticsearch.xpack.inference.services.ServiceFields.SIMILARITY;
 import static org.elasticsearch.xpack.inference.services.fireworksai.FireworksAiServiceParameterizedTestConfiguration.createInternalChatCompletionModel;
 import static org.elasticsearch.xpack.inference.services.fireworksai.FireworksAiServiceParameterizedTestConfiguration.createInternalEmbeddingModel;
+import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 
 public class FireworksAiServiceTests extends InferenceServiceTestCase {
+
+    public static final String API_KEY = "secret";
+    public static final String MODEL_ID = "test-model";
 
     public void testInfer_SendsEmbeddingsRequest() throws IOException {
         var senderFactory = HttpRequestSenderTests.createSenderFactory(threadPool, clientManager);
@@ -76,9 +86,10 @@ public class FireworksAiServiceTests extends InferenceServiceTestCase {
                 """;
             webServer.enqueue(new MockResponse().setResponseCode(200).setBody(responseJson));
 
-            var model = createInternalEmbeddingModel(getUrl(webServer), "secret", "model", null, null);
-            PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
-            service.infer(model, null, null, null, List.of("abc"), false, new HashMap<>(), InputType.INTERNAL_INGEST, null, listener);
+            var model = createInternalEmbeddingModel(getUrl(webServer), API_KEY, MODEL_ID, null, null);
+            TestPlainActionFuture<InferenceServiceResults> listener = new TestPlainActionFuture<>();
+            var inputs = List.of("abc");
+            service.infer(model, inputs, false, new HashMap<>(), InputType.INTERNAL_INGEST, null, listener);
 
             var result = listener.actionGet(TEST_REQUEST_TIMEOUT);
 
@@ -86,55 +97,113 @@ public class FireworksAiServiceTests extends InferenceServiceTestCase {
             assertThat(webServer.requests(), hasSize(1));
             assertNull(webServer.requests().get(0).getUri().getQuery());
             assertThat(webServer.requests().get(0).getHeader(HttpHeaders.CONTENT_TYPE), equalTo(XContentType.JSON.mediaType()));
-            assertThat(webServer.requests().get(0).getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
+            assertThat(webServer.requests().get(0).getHeader(HttpHeaders.AUTHORIZATION), equalTo(Strings.format("Bearer %s", API_KEY)));
 
             var requestMap = entityAsMap(webServer.requests().get(0).getBody());
             assertThat(requestMap.size(), Matchers.is(2));
-            assertThat(requestMap.get("input"), Matchers.is(List.of("abc")));
-            assertThat(requestMap.get("model"), Matchers.is("model"));
+            assertThat(requestMap.get("input"), Matchers.is(inputs));
+            assertThat(requestMap.get("model"), Matchers.is(MODEL_ID));
         }
     }
 
-    public void testInfer_SendsChatCompletionRequest() throws IOException {
+    public void testUnifiedCompletionInfer_SendsChatCompletionRequest() throws Exception {
         var senderFactory = HttpRequestSenderTests.createSenderFactory(threadPool, clientManager);
 
         try (var service = new FireworksAiService(senderFactory, createWithEmptySettings(threadPool), mockClusterServiceEmpty())) {
 
-            String responseJson = """
+            String responseJson = Strings.format("""
+                data: %s
+
+                """, XContentHelper.stripWhitespace("""
                 {
-                  "id": "chatcmpl-123",
-                  "object": "chat.completion",
-                  "created": 1677652288,
-                  "model": "accounts/fireworks/models/llama-v3p1-70b-instruct",
-                  "choices": [{
-                    "index": 0,
-                    "message": {
-                      "role": "assistant",
-                      "content": "Hello! How can I help you?"
-                    },
-                    "finish_reason": "stop"
-                  }],
-                  "usage": {
-                    "prompt_tokens": 9,
-                    "completion_tokens": 12,
-                    "total_tokens": 21
-                  }
+                    "id": "12345",
+                    "object": "chat.completion.chunk",
+                    "created": 123456789,
+                    "model": "gpt-4o-mini",
+                    "system_fingerprint": "123456789",
+                    "choices": [{
+                            "index": 0,
+                            "delta": {
+                                "content": "hello, world"
+                            },
+                            "logprobs": null,
+                            "finish_reason": "stop"
+                        }
+                    ],
+                    "usage": {
+                        "prompt_tokens": 16,
+                        "completion_tokens": 28,
+                        "total_tokens": 44,
+                        "prompt_tokens_details": {
+                            "cached_tokens": 0,
+                            "audio_tokens": 0
+                        },
+                        "completion_tokens_details": {
+                            "reasoning_tokens": 0,
+                            "audio_tokens": 0,
+                            "accepted_prediction_tokens": 0,
+                            "rejected_prediction_tokens": 0
+                        }
+                    }
                 }
-                """;
+                """));
             webServer.enqueue(new MockResponse().setResponseCode(200).setBody(responseJson));
 
-            var model = createInternalChatCompletionModel(getUrl(webServer), "secret", "test-model");
-            PlainActionFuture<InferenceServiceResults> listener = new PlainActionFuture<>();
-            service.infer(model, null, null, null, List.of("Hello"), false, new HashMap<>(), InputType.UNSPECIFIED, null, listener);
+            var model = createInternalChatCompletionModel(getUrl(webServer), API_KEY, MODEL_ID);
+            TestPlainActionFuture<InferenceServiceResults> listener = new TestPlainActionFuture<>();
+            var request = UnifiedCompletionRequest.of(List.of(new Message(new ContentString("Hello"), "user", null, null)));
 
-            var result = listener.actionGet(TEST_REQUEST_TIMEOUT);
+            service.unifiedCompletionInfer(model, request, null, listener);
 
+            var inferenceServiceResults = listener.actionGet(TEST_REQUEST_TIMEOUT);
+
+            InferenceEventsAssertion.assertThat(inferenceServiceResults)
+                .hasFinishedStream()
+                .hasNoErrors()
+                .hasEvent(XContentHelper.stripWhitespace("""
+                        {
+                            "id":"12345",
+                            "choices":[
+                                {
+                                    "delta":{"content":"hello, world"},
+                                    "finish_reason":"stop",
+                                    "index":0
+                                }
+                            ],
+                            "model":"gpt-4o-mini",
+                            "object":"chat.completion.chunk",
+                            "usage":{
+                                "completion_tokens":28,
+                                "prompt_tokens":16,
+                                "total_tokens":44,
+                                "prompt_tokens_details":{"cached_tokens":0},
+                                "completion_tokens_details":{"reasoning_tokens":0}
+                            }
+                        }
+                    """));
+
+            // Verify the request was sent
             assertThat(webServer.requests(), hasSize(1));
-            assertThat(webServer.requests().get(0).getHeader(HttpHeaders.CONTENT_TYPE), equalTo(XContentType.JSON.mediaType()));
-            assertThat(webServer.requests().get(0).getHeader(HttpHeaders.AUTHORIZATION), equalTo("Bearer secret"));
+            assertThat(webServer.requests().getFirst().getHeader(HttpHeaders.CONTENT_TYPE), equalTo(XContentType.JSON.mediaType()));
+            assertThat(webServer.requests().getFirst().getHeader(HttpHeaders.AUTHORIZATION), equalTo(Strings.format("Bearer %s", API_KEY)));
 
-            var requestMap = entityAsMap(webServer.requests().get(0).getBody());
-            assertThat(requestMap.get("model"), Matchers.is("test-model"));
+            var requestBody = webServer.requests().getFirst().getBody();
+
+            String expectedJson = stripWhitespace(Strings.format("""
+                {
+                    "messages":[
+                        {
+                            "content":"Hello",
+                            "role":"user"
+                        }
+                    ],
+                    "model":"%s",
+                    "n":1,
+                    "stream":true,
+                    "stream_options":{"include_usage":true}
+                }
+                """, MODEL_ID));
+            assertThat(requestBody, is(expectedJson));
         }
     }
 
@@ -246,7 +315,7 @@ public class FireworksAiServiceTests extends InferenceServiceTestCase {
 
     @Override
     public Model createEmbeddingModel(SimilarityMeasure similarity) {
-        var serviceSettings = new HashMap<String, Object>(Map.of(MODEL_ID, randomAlphaOfLength(8)));
+        var serviceSettings = new HashMap<String, Object>(Map.of(ServiceFields.MODEL_ID, randomAlphaOfLength(8)));
         if (similarity != null) {
             serviceSettings.put(SIMILARITY, similarity.toString());
         }
